<package>
  <name>ros_controllers</name>
  <version>0.4.0</version>
  <description>Library of ros controllers</description>
  <maintainer email="wim@hidof.com">Maintained by Wim Meeussen</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ros_controllers</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maintained by Wim Meeussen</author>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>imu_sensor_controller</run_depend>
  <run_depend>force_torque_sensor_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>forward_command_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>controllers_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
