<package>
  <name>ros_controllers</name>
  <version>0.11.1</version>
  <description>Library of ros controllers</description>

  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ros_controllers</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers/</url>

  <author>Wim Meeussen</author>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>imu_sensor_controller</run_depend>
  <run_depend>force_torque_sensor_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>forward_command_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>gripper_action_controller</run_depend>
  <run_depend>rqt_joint_trajectory_controller</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
